--- a/src/App.css
+++ b/src/App.css
@@ -1,17 +1,32 @@
 .logo {
-  float: left;
-  height: 100px;
-  margin: 25px;
-
+  height: 70px;
+  margin: 10px;
 }
 
+.header {
+  background-color: #ddd;
+  width: 100%;
+  grid-column: 1/4;
+  height: 85px;
+}
+
+.homeButton {
+  float: right;
+  margin: 20px;
+  padding: 15px;
+  cursor: pointer;
+}
 .content {
+  margin-top: -25px;
   text-align: center;
+  height: 700px;
 }
 
 .grid {
   display: grid;
-  grid-template-columns: 20% 60% 20%;
+  grid-template-columns: 2fr 6fr 2fr;
+  grid-template-rows: 1fr 5fr 1fr;
+
 }
 
 .symbolButton {
@@ -19,13 +34,14 @@
   margin: 50px;
   padding: 20px;
   cursor: pointer;
+  background-color: #ddd;
 }
 
 .rules {
   margin: 25px;
   float: left
 }
-
-/* div {
+/*
+div {
   border: 1px solid green;
 } */
