--- a/src/App.css
+++ b/src/App.css
@@ -1,10 +1,23 @@
+body {
+  background-image: url("/sciencecentrebackground.jpg");
+}
+
+.gameImage {
+  width: 200px;
+  display: block;
+}
+
+.gameChoice {
+  display: inline-block;
+  margin: 30px;
+}
+
 .logo {
   height: 70px;
   margin: 10px;
 }
 
 .header {
-  background-color: #ddd;
   width: 100%;
   grid-column: 1/4;
   height: 85px;
@@ -12,8 +25,10 @@
 
 .homeButton {
   float: right;
+  border-radius: 10rem;
   margin: 20px;
   padding: 15px;
+  font-size: 20px;
   cursor: pointer;
 }
 .content {
@@ -31,8 +46,11 @@
 
 .symbolButton {
   border: 1px solid blue;
+  border-radius: 10rem;
   margin: 25px;
   padding: 20px;
+  font-size: 20px;
+  width: 150px;
   cursor: pointer;
   background-color: #ddd;
 }
@@ -45,7 +63,3 @@
 .board-row {
   text-align: left;
 }
-/*
-div {
-  border: 1px solid green;
-} */
