set it up so that images are accessible for a static build

--- a/src/App.css
+++ b/src/App.css
@@ -1,5 +1,5 @@
 body {
-  background-image: url("/sciencecentrebackground.jpg");
+  background-image: url("./images/sciencecentrebackground.jpg");
 }
 
 .gameImage {
